--- a/src/App.css
+++ b/src/App.css
@@ -85,10 +85,7 @@ h1 {
 
 @media screen and (max-width: 960px) {
   .new-games {
-    margin: auto;
-    left: 0;
-    right: 0;
-    bottom: 1rem;
+    display: none;
   }
   .release-date {
     margin: auto;
