--- a/src/App.css
+++ b/src/App.css
@@ -85,7 +85,10 @@ h1 {
 
 @media screen and (max-width: 960px) {
   .new-games {
-    display: none;
+    margin: auto;
+    left: 0;
+    right: 0;
+    bottom: 1rem;
   }
   .release-date {
     margin: auto;
