--- a/src/components/Game.css
+++ b/src/components/Game.css
@@ -7,6 +7,7 @@
     border: 1px solid rgba(255, 255, 255, 0.21);
     border-radius: 20px;
     max-width: 250px;
+    min-height: 380px;
     margin: 32px auto;
     padding: 20px;
     box-shadow: rgba(95, 97, 100, 0.2) 0px 8px 24px;
