--- a/src/components/Game.css
+++ b/src/components/Game.css
@@ -39,3 +39,12 @@
     font-weight: bolder;
     align-self: flex-end;
 }
+
+@media screen and (max-width: 960px) {
+    .product-title {
+        font-size: 1rem;
+    }
+    .rate {
+        font-size: .9rem;
+    }
+}
