--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@ h1 {
 }
 
 .app {
-  height: 100dvh;
+  height: 100vh;
   width: 100%;
   padding: 0;
   margin: 0;
@@ -21,7 +21,6 @@ h1 {
   width: 100%;
   height: auto;
   text-align: center;
-  font-size: 2rem;
   margin-top: 8%;
 }
 
@@ -88,8 +87,11 @@ h1 {
 }
 
 @media screen and (max-width: 960px) {
-  .app {
-    height: 100%;
+  h1 {
+    font-size: 2rem;
+  }
+  .history h1 {
+    margin-top: 1rem;
   }
   .new-games {
     margin: auto;
