add new card to swiper games

--- a/src/components/Game.css
+++ b/src/components/Game.css
@@ -23,6 +23,9 @@
     width: 100%;
     margin: auto;
 }
+.product:last-child img {
+    height: 200px;
+}
 .product-title {
     font-size: 1.5rem;
     color: var(--white);
