--- a/src/App.css
+++ b/src/App.css
@@ -57,16 +57,17 @@ h1 {
 }
 
 .new-games {
+  text-decoration: none;
   border: 2px solid #fff;
   filter: drop-shadow(0 0 .5em #ffffffaa);
   background: transparent;
-  color: #020202;
+  color: #fff;
   border-radius: 50rem;
-  width: fit-content;
+  width: 160px;
   padding: 10px 20px;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   position: absolute;
   right: 2rem;
   bottom: 2rem;
@@ -74,9 +75,14 @@ h1 {
 }
 .new-games:hover {
   background-color: #fff;
+  color: #020202;
 }
 .new-games:hover i {
   color: #020202;
+}
+
+.new-games img {
+  max-width: 40px;
 }
 
 .new-games i {
@@ -84,6 +90,7 @@ h1 {
   color: #fff;
   transition: all ease-in 300ms;
 }
+
 
 @media screen and (max-width: 960px) {
   h1 {
