--- a/src/App.css
+++ b/src/App.css
@@ -67,7 +67,8 @@ h1 {
   padding: 10px 20px;
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: center;
+  gap: .5rem;
   position: absolute;
   right: 2rem;
   bottom: 2rem;
