--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,8 @@ h1 {
 }
 
 .app {
-  height: 100vh;
+  height: 100%;
+  min-height: 100dvh;
   width: 100%;
   padding: 0;
   margin: 0;
@@ -92,6 +93,21 @@ h1 {
   transition: all ease-in 300ms;
 }
 
+/* Styles Blog Page */
+#page-blog {
+  text-align: left;
+  padding: 0 2rem;
+}
+#page-blog .title-page {
+  padding-left: 4rem;
+}
+#page-blog h1 {
+  margin-bottom: 1rem;
+}
+#page-blog .img-blog{
+  max-width: 100%;
+  height: auto;
+}
 
 @media screen and (max-width: 960px) {
   h1 {
