add more blog post and contact page

--- a/src/App.css
+++ b/src/App.css
@@ -97,6 +97,7 @@ h1 {
 #page-blog {
   text-align: left;
   padding: 0 2rem;
+  padding-bottom: 5rem;
 }
 #page-blog .title-page {
   padding-left: 4rem;
