--- a/src/components/GrillaPost.css
+++ b/src/components/GrillaPost.css
@@ -2,7 +2,9 @@
     display: flex;
     align-items: flex-start;
     justify-content: flex-start;
+    flex-wrap: wrap;
     padding-left: 4rem;
     padding-right: 4rem;
     gap: 1rem;
+    padding-top: 2rem;
 }
