--- a/src/components/Post.css
+++ b/src/components/Post.css
@@ -7,14 +7,14 @@
     -webkit-backdrop-filter: blur(5.6px);
     border: 1px solid rgba(255, 255, 255, 0.21);
     border-radius: 20px;
-    margin: 32px auto;
     box-shadow: rgba(95, 97, 100, 0.2) 0px 8px 24px;
     text-align: left;
     display: grid;
+    flex: 1;
 } 
 .img-blog{
     width: 100%;
-    max-width: 420px;
+    max-width:380px;
     height: auto;
     border-top-right-radius: 1rem;
     border-top-left-radius: 1rem;
